--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -231,12 +231,12 @@
         margin: 0;
         padding: 0;
         justify-content: space-around;
-        background-color: var(--light-blue);
+        /* background-color: var(--light-blue); */
         transition:  0.8s ease-in-out;
     }
 
     .Header__navbar__menu__true ul a{
-        background-color: var(--light-blue);
+        /* background-color: var(--light-blue); */
         color: white;
     }
 
@@ -251,7 +251,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: var(--light-blue);
+        /* background-color: var(--light-blue); */
         transition: bottom 0.8s ease-in-out;
         z-index: -1;
     }
