--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Figtree:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap');
 :root{
     --grey: rgb(241, 244, 246);
     --light-grey: rgb(243, 245, 248);
@@ -13,6 +13,6 @@
     
     box-sizing: border-box;
     padding: 0;
-    font-family: 'Figtree', sans-serif;
+    font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
