--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -7,17 +7,18 @@
     --font: rgb(126, 132, 136);
     --blue: rgb(16, 143, 228);
     --light-blue: rgb(58, 162, 232);
+    --header-index: 10;
 }
 
 
 .Home{
     width: 100vw;
     min-height: 86vh;
-    z-index: 1;
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    z-index: calc(var(--header-index)-1);
 }
 
 .Home__description{
@@ -26,7 +27,7 @@
     align-items: center;
     flex-direction: column;
     /* border: 1px solid green; */
-    margin-top: 35%;
+    margin-top: 40%;
     width: 100%;
 }
 
@@ -41,6 +42,11 @@
 
 .Home__description__content{
     width:70%;
+    
+}
+
+.Home__description__content p{
+    text-align: center;
 }
 
 .Home__description__header h2{
@@ -49,7 +55,6 @@
     color: var(--dark);
     position: relative;
     text-shadow: 2px 2px 0px white, 2.5px 2.5px 0px rgb(70, 81, 87,0.3);
-    z-index: -1;
 }
 
 .Home__description__header h5{
@@ -71,7 +76,35 @@
 
 .Home__img img{
     object-fit: contain;
-    width: 80%;
+    width: 400px;
+    z-index: 8;
+}
+
+.Home__img .background-1{
+    width: 500px;
+    height: 500px;
+    border-radius: 250px;
+    opacity: 0.8;
+    content: '';
+    background-color: rgb(247, 250, 253,0.4);
+    position:absolute;
+    top: 10%;
+    z-index: 7;
+    border: 4px solid rgb(255,255,255,0.3);
+    box-shadow: 0px -4px 5px rgb(70, 81, 87,0.02);
+}
+.Home__img .background-2{
+    width: 450px;
+    height: 450px;
+    border-radius: 250px;
+    opacity: 1;
+    content: '';
+    background-color: rgb(247, 250, 253,0.4);
+    position:absolute;
+    top: 30%;
+    z-index: 7;
+    border: 4px solid rgb(255,255,255,0.3);
+    box-shadow: 0px -4px 5px rgb(70, 81, 87,0.02);
 }
 
 
