--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -70,14 +70,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
-    bottom: 6vh;
+    position:relative;
+    bottom: 0;
 }
 
 .Home__img img{
     object-fit: contain;
     width: 400px;
     z-index: 8;
+    position: fixed;
+    bottom: 6vh;
 }
 
 .Home__img .background-1{
@@ -87,12 +89,12 @@
     opacity: 0.8;
     content: '';
     background-color: rgb(247, 250, 253,0.4);
-    position:absolute;
-    top: 10%;
+    position:fixed;
+    top: 50%;
     z-index: 7;
     border: 4px solid rgb(255,255,255,0.3);
     box-shadow: 0px -4px 5px rgb(70, 81, 87,0.02);
-}
+} 
 .Home__img .background-2{
     width: 450px;
     height: 450px;
@@ -100,8 +102,8 @@
     opacity: 1;
     content: '';
     background-color: rgb(247, 250, 253,0.4);
-    position:absolute;
-    top: 30%;
+    position:fixed;
+    top: 60%;
     z-index: 7;
     border: 4px solid rgb(255,255,255,0.3);
     box-shadow: 0px -4px 5px rgb(70, 81, 87,0.02);
