--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -13,7 +13,7 @@
 
 .Home{
     width: 100vw;
-    min-height: 86vh;
+    /* min-height: 86vh; */
     position: relative;
     display: flex;
     flex-direction: column;
