--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -77,7 +77,7 @@
 .Home__img img{
     object-fit: contain;
     width: 400px;
-    z-index: 8;
+    z-index: calc(var(--header-index)-2);
     position: fixed;
     bottom: 6vh;
 }
@@ -91,7 +91,7 @@
     background-color: rgb(247, 250, 253,0.4);
     position:fixed;
     top: 50%;
-    z-index: 7;
+    z-index: calc(var(--header-index)-3);
     border: 4px solid rgb(255,255,255,0.3);
     box-shadow: 0px -4px 5px rgb(70, 81, 87,0.02);
 } 
@@ -104,7 +104,7 @@
     background-color: rgb(247, 250, 253,0.4);
     position:fixed;
     top: 60%;
-    z-index: 7;
+    z-index: calc(var(--header-index)-3);
     border: 4px solid rgb(255,255,255,0.3);
     box-shadow: 0px -4px 5px rgb(70, 81, 87,0.02);
 }
@@ -113,7 +113,7 @@
 
 
 
-@media screen and (max-width:400px){
+@media screen and (min-width:562px){
     .Home__description__header h2{
         font-size: 40px;
         text-shadow: 1px 1px 0px white, 2px 2px 0px rgb(70, 81, 87,0.3);
@@ -122,18 +122,64 @@
     .Home__description__header h5{
         font-size: 16px;
     }
+
+    .Home__description__content p{
+        font-size: 18px;
+    }
 }
 
-@media screen and (min-width:600px){
+@media screen and (min-width:768px) and (max-width: 1023px){
+    .Home{
+        height: 86vh;
+        justify-content: center; 
+    }
     .Home__description{
         justify-content: space-evenly;
         width: 50%;
+        margin-top: 0;
     }
 
     .Home__description__header{
         align-items: flex-start;
     }
+
+    .Home__description__content p{
+        text-align:left;
+    }
+    .Home__img{
+        /* border: 1px solid blue; */
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position:absolute;
+        right: 0;
+        bottom: 0;
+    }
+    
+    .Home__img img{
+        object-fit: contain;
+        width: 800px;
+        z-index: calc(var(--header-index)-2);
+        position: relative;
+        bottom: 0;
+    }
+    
+    .Home__img .background-1{
+        position:fixed;
+        top: 60%;
+        
+    } 
+    .Home__img .background-2{
+        width: 420px;
+        height: 420px;
+        position:fixed;
+        top: 68%;
+        
+
+    }
 }
-@media screen and (max-width:1000px){
+
+@media screen and (min-width:1024px){
 
 }
