Agregando frames al home - version desktop

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -109,6 +109,13 @@
     box-shadow: 0px -4px 5px rgb(70, 81, 87,0.02);
 }
 
+.Home__works{
+    visibility: hidden;
+}
+
+.Home__works .Home__works__item iframe{
+    pointer-events: none;
+}
 
 
 
@@ -128,7 +135,7 @@
     }
 }
 
-@media screen and (min-width:768px) and (max-width: 1023px){
+@media screen and (min-width:768px) {
     .Home{
         height: 86vh;
         justify-content: center; 
@@ -181,5 +188,28 @@
 }
 
 @media screen and (min-width:1024px){
+    .Home{
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .Home__description{
+        justify-content: space-evenly;
+        width: 30%;
+        margin-top: 0;
+    }
+    .Home__img{
+        /* border: 1px solid blue; */
+        width: 30%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position:relative;
+        /* right: 0;
+        bottom: 0; */
+    }
 
+    .Home__works{
+        visibility: visible;
+    }
 }
